test/test_11813225_10.spl
int arrays()
{
  int a[10], b;
  float c;
  c = b[5];
  f(a[1]);
}